k8s/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rag-system
